[IO-726] Add MemoryMappedInputStream, #215.
Modified PR 215 from shollander with:
- Do not write the console.
- Simplify cleaner check support.
- Simplify exception handling.
- Don't initialize instance variables to their default values.
- Un-nest else clause.
- Declaring interfaces as static is redundant.
- Use EOF constant instead of magic number.
- Don't throw RuntimeException, use IllegalStateException.
- Pacakge private class does not need public method.
- Use final.
- Improve Javadocs.
- Javadoc sentences should end in a period.
- Javadoc do not need first sentence to be in an HTML p element.
- No need to use `this.` when you do not need to.
- In-line some single use variables.
- Sort members.